Address Sonar suggestions for audit path logging